added task decomposer

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+.git
+.gitignore
 .env
-.cache
+.env.template
+__pycache__
+*.pyc
+.pytest_cache
+.coverage
+htmlcov
 .venv
-*/__pycache__
-*/*/__pycache__
-workspace
+venv
+.idea
+.vscode
+*.log
+data/*
+workspace/*
+notebooks/.ipynb_checkpoints
